# 2020_20310814

./: .gitignore  .travis.yml  Doxyfile  README.md  generateDocumentationAndDeploy.h  generateDocumentationAndDeploy.sh  index.html  last-commit.cmd
Week2/: trial.cpp
worksheet2/: git-cheat-sheet.txt  hi_and_date.cmd
worksheet3/: hello.cpp
worksheet3/calc_msvc/: adder.cpp  libmaths.dll.exp  libmaths.exp  libmaths.lib
worksheet3/calc_msvc/maths_library2/lib/: maths.lib
worksheet4/build2/: CMakeCache.txt
worksheet4/build2/Debug/: hello.ilk
worksheet4/build2/hello.dir/Debug/: hello.exe.recipe
worksheet4/build2/hello.dir/Debug/hello.tlog/: CustomBuild.read.1.tlog  link.command.1.tlog  link.write.1.tlog
worksheet4/build2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
worksheet4/calc_cmake/mingw_dynamic/: CMakeCache.txt  Makefile
worksheet4/calc_cmake/mingw_static/: CMakeCache.txt  Makefile
worksheet4/calc_cmake/msvc_dynamic/: CMakeCache.txt
worksheet4/calc_cmake/msvc_dynamic/Debug/: calc.ilk  maths.ilk
worksheet4/calc_cmake/msvc_dynamic/calc.dir/Debug/: calc.exe.recipe
worksheet4/calc_cmake/msvc_dynamic/maths.dir/Debug/: maths.dll.recipe
worksheet4/calc_cmake/msvc_static/: CMakeCache.txt
worksheet4/calc_cmake/msvc_static/Debug/: calc.ilk
worksheet4/calc_cmake/msvc_static/calc.dir/Debug/: calc.exe.recipe
worksheet4/calc_cmake/msvc_static/maths.dir/Debug/: maths.vcxproj.FileListAbsolute.txt
worksheet4/hello_cmake/build2/hello.dir/Debug/: CodeAnalysisResultManifest.txt  (+2 more)
worksheet5/exercise2/: CMakeLists.txt  edititemdialog.cpp  edititemdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  savefiledialog.cpp  stockitem.cpp  stockitem.h  stockitemlistmodel.cpp  stockitemlistmodel.h
worksheet5/exercise2/icon/: Icon.qrc  Resources.qrc  icon.qrc.depends
worksheet5/exercises/: edititemdialog.ui  mainwindow.cpp  mainwindow.ui
worksheet5/hello_qt_cm/: CMakeLists.txt  cmake_gen_mingw.bat
worksheet5/hello_qt_msvc/: cmake_gen_msvc15.bat  hello_qt.cpp
worksheet6/Exercise1/: CMakeLists.txt  vtk_cube.cpp
worksheet6/Exercise2/: mainwindow.ui
worksheet6/Exercise3/: mainwindow.cpp  mainwindow.h  mainwindow.ui
worksheet6/Exercise3 - Copy/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
worksheet6/Exercise3/Geometrics/Hexahedron/: CMakeLists.txt  hexahedron.cpp
worksheet6/Exercise3/Geometrics/Pyramid/: CMakeLists.txt  Pyramid.cpp
worksheet6/Exercise3/Geometrics/Tetrahedron/: tetrahedron.cpp
worksheet6/Geometrics/Tetrahedron/: CMakeLists.txt
worksheet7/: .travis.yml  CMakeLists.txt  Doxyfile  calc.cpp  generateDocumentationAndDeploy.sh  maths.cpp  maths.h  test1.cpp
worksheet8/: CMakeLists.txt
(+52 files in other folders)
